java-operator/src/test/resources/com/enonic/kubernetes/operator/api/ingress/update/valid.yaml
admissionRequest:
  request:
    operation: UPDATE
    oldObject:
      apiVersion: networking.k8s.io/v1
      kind: Ingress
      metadata:
        name: test-domain-purplejs-io
        namespace: mycloud-mysolution-myenv-myservice
        annotations:
          enonic.cloud/ingress.cert.manage: "true"
          enonic.cloud/xp8.vhost.mapping.1.host: test-domain.purplejs.io
          enonic.cloud/xp8.vhost.mapping.1.source: /
          enonic.cloud/xp8.vhost.mapping.1.target: /admin
          enonic.cloud/xp8.vhost.mapping.1.idproviders: system
      spec:
        rules:
          - host: test-domain.purplejs.io
            http:
              paths:
                - path: /
                  pathType: ImplementationSpecific
                  backend:
                    service:
                      name: master
                      port:
                        number: 8080
    object:
      apiVersion: networking.k8s.io/v1
      kind: Ingress
      metadata:
        name: test-domain-purplejs-io
        namespace: mycloud-mysolution-myenv-myservice
        annotations:
          kubernetes.io/ingress.class: "myingress"
          enonic.cloud/xp8.vhost.mapping.1.host: test-domain.purplejs.io
          enonic.cloud/xp8.vhost.mapping.1.source: /
          enonic.cloud/xp8.vhost.mapping.1.target: /admin
          enonic.cloud/xp8.vhost.mapping.1.idproviders: system
      spec:
        rules:
          - host: test-domain.purplejs.io
            http:
              paths:
                - path: /
                  pathType: ImplementationSpecific
                  backend:
                    service:
                      name: master
                      port:
                        number: 8080

assertResult:
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: test-domain-purplejs-io
    namespace: mycloud-mysolution-myenv-myservice
    annotations:
      kubernetes.io/ingress.class: "myingress"
      enonic.cloud/xp8.vhost.mapping.1.host: test-domain.purplejs.io
      enonic.cloud/xp8.vhost.mapping.1.source: "/"
      enonic.cloud/xp8.vhost.mapping.1.target: "/admin"
      enonic.cloud/xp8.vhost.mapping.1.idproviders: "system"
    labels:
      enonic.cloud/vhost-loaded: "false"
  spec:
    rules:
      - host: test-domain.purplejs.io
        http:
          paths:
            - path: /
              pathType: ImplementationSpecific
              backend:
                service:
                  name: master
                  port:
                    number: 8080
